--- a/_includes/header.html
+++ b/_includes/header.html
@@ -19,7 +19,7 @@
         <div class="trigger">
           <a class="page-link" href="https://go.illinois.edu/JBasneyCal">Calendar</a>
           <a class="page-link" href="#projects">Projects</a>
-          <a class="page-link" href="#projects">Projects</a>
+          <a class="page-link" href="#pubs">Publications</a>
           <a class="page-link" href="#talks">Presentations</a>
         </div>
       </nav>
