--- a/_includes/header.html
+++ b/_includes/header.html
@@ -20,7 +20,11 @@
           <a class="page-link" href="https://go.illinois.edu/JBasneyCal">Calendar</a>
           <a class="page-link" href="#projects">Projects</a>
           <a class="page-link" href="#pubs">Publications</a>
+          <a class="page-link" href="#reports">Reports</a>
           <a class="page-link" href="#talks">Presentations</a>
+          <a class="page-link" href="#posters">Posters</a>
+          <a class="page-link" href="#funding">Funding</a>
+          <a class="page-link" href="#service">Service</a>
         </div>
       </nav>
   </div>
