--- a/_includes/header.html
+++ b/_includes/header.html
@@ -17,6 +17,7 @@
         </label>
 
         <div class="trigger">
+          <a class="page-link" href="https://go.illinois.edu/MeetWithJimBasney">Book Meeting</a>
           <a class="page-link" href="https://go.illinois.edu/JBasneyCal">Calendar</a>
           <a class="page-link" href="#projects">Projects</a>
           <a class="page-link" href="#pubs">Publications</a>
